...
        android:scaleType="centerCrop"
        android:src="@drawable/garage"
        tools:layout_editor_absoluteX="-16dp"
        tools:layout_editor_absoluteY="1dp" />

    <ImageView
        android:id="@+id/imageView_fight"
        android:layout_width="214dp"
        android:layout_height="112dp"
        android:alpha="0.95"
        android:src="@drawable/start_match"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.52"
        android:visibility="invisible"/>

    <ImageView
        android:id="@+id/settings"
        android:layout_width="63dp"
        android:layout_height="100dp"
        android:src="@drawable/settings"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.02"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/logout"
        android:layout_width="63dp"
        android:layout_height="100dp"
        android:src="@drawable/exit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.145"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/stats"
        android:layout_width="63dp"
        android:layout_height="100dp"
        android:src="@drawable/award"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        android:alpha="0.85"/>

    <ImageView
        android:id="@+id/restart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.026"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.589"
        app:srcCompat="@drawable/restart" />

    <ImageView
        android:id="@+id/imageView_change_avatar"
        android:layout_width="100px"
        android:layout_height="100px"
        android:src="@drawable/exchange"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintHorizontal_bias="0.37"
...
        app:layout_constraintTop_toTopOf="@+id/stats"
        app:layout_constraintVertical_bias="0.47000003"
        app:srcCompat="@drawable/cloud"
        android:visibility="invisible"/>

    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/cat_my_gif1"
        android:layout_width="96dp"
        android:layout_height="121dp"
        android:src="@drawable/cat_player1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.214"
...
        app:layout_constraintTop_toTopOf="@+id/stats"
        app:layout_constraintVertical_bias="0.47000003"
        app:srcCompat="@drawable/cloud"
        android:visibility="invisible"/>

    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/cat_my_gif2"
        android:layout_width="96dp"
        android:layout_height="121dp"
        android:src="@drawable/cat_player2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.371"
...
        app:layout_constraintTop_toTopOf="@+id/stats"
        app:layout_constraintVertical_bias="0.47000003"
        app:srcCompat="@drawable/cloud"
        android:visibility="invisible"/>

    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/cat_my_gif3"
        android:layout_width="96dp"
        android:layout_height="121dp"
        android:src="@drawable/cat_player3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.544"
...
        app:layout_constraintTop_toTopOf="@+id/stats"
        app:layout_constraintVertical_bias="0.47000003"
        app:srcCompat="@drawable/cloud"
        android:visibility="invisible"/>

    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/cat_my_gif4"
        android:layout_width="96dp"
        android:layout_height="121dp"
        android:src="@drawable/cat_player4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.715"
...

    <TextView
        android:id="@+id/textView_choose_character"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/myfont"
        android:text="Choose your character"
        android:textColor="@color/colorOrange"
        android:textSize="100px"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.13"
        android:visibility="invisible"/>


    <ImageView
        android:id="@+id/imageView_padlock3"
        android:layout_width="70dp"
        android:layout_height="69dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintHorizontal_bias="0.54"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.39"
        app:srcCompat="@drawable/padlock"
        android:visibility="invisible"/>

    <ImageView
        android:id="@+id/imageView_padlock4"
        android:layout_width="70dp"
        android:layout_height="69dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintHorizontal_bias="0.71"
        app:layout_constraintStart_toStartOf="@+id/imageView"
...
