...
    android:layout_height="800px"
    android:background="#ffffffff"
    android:orientation="vertical">


    <Button
        android:id="@+id/btn_dialog"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_below="@+id/text_dialog"
        android:layout_centerHorizontal="true"
        android:background="@color/colorTime"
        android:gravity="center_vertical|center_horizontal"
...
    <TextView
        android:id="@+id/old_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/image"
        android:fontFamily="@font/myfont"
        android:text="Old username:"
        android:textColor="@color/colorDarkGray"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.165"
        app:layout_constraintStart_toStartOf="parent"
...
    <TextView
        android:id="@+id/new_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/image"
        android:fontFamily="@font/myfont"
        android:text="New username:"
        android:textColor="@color/colorDarkGray"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.17"
        app:layout_constraintStart_toStartOf="parent"
...
        app:layout_constraintHorizontal_bias="0.645"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.18" />

    <EditText
        android:id="@+id/new_username_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Choose new username"
        android:inputType="textPersonName"
        android:text=""
...
        app:layout_constraintHorizontal_bias="0.844"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.52" />

    <Button
        android:id="@+id/button_save_new_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/myfont"
        android:text="Save"
        android:textColor="@color/colorDarkGray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
...
