...
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

    </com.example.cats.CustomView>

    <TextView
        android:id="@+id/textView_timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/myfont"
        android:text="10"
        android:textColor="@color/colorStatus"
        android:textSize="110px"
...
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.19999999"
        android:visibility="invisible"/>

    <ImageView
        android:id="@+id/imageView_pause"
        android:layout_width="100px"
        android:layout_height="wrap_content"
        android:src="@drawable/pause"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.903"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.173" />

    <ImageView
        android:id="@+id/saveAndExit"
        android:layout_width="41dp"
        android:layout_height="42dp"
        android:src="@drawable/diskette"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintHorizontal_bias="0.091"
...
